[package]
name = "ksign"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
clap = { version = "4.5.18", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
sha2 = "0.10.8"
thiserror = "1.0.63"

[dev-dependencies]
tempfile = "3.12.0"
test_bin = "0.4.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
#missing_docs = "warn"
